src/test/ui/parser/missing-fat-arrow-after-match-guard.stderr
error: expected one of `.`, `=>`, `?`, or an operator, found `{`
  --> $DIR/missing-fat-arrow-after-match-guard.rs:8:34
   |
LL |         () if f == Foo { x: 42 } {}
   |                                  ^ expected one of `.`, `=>`, `?`, or an operator
   |
help: try adding a fat arrow here
   |
LL |         () if f == Foo { x: 42 } => {}
   |                                  ++

error: expected one of `!`, `.`, `::`, `=>`, `?`, or an operator, found `{`
  --> $DIR/missing-fat-arrow-after-match-guard.rs:20:27
   |
LL |         Some(x) if x == y {
   |                           ^ expected one of `!`, `.`, `::`, `=>`, `?`, or an operator
   |
help: try adding a fat arrow here
   |
LL |         Some(x) if x == y => {
   |                           ++

error: aborting due to 2 previous errors

